--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-router-dom": "^6.26.0",
+    "react-scripts": "^5.0.1",
     "watchman": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -37,8 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "eslint": "^6.8.0",
-    "globals": "^15.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "typescript-eslint": "^7.16.1"
   }
 }
