--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "eslint": "^9.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
@@ -39,9 +42,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "typescript-eslint": "^7.16.1"
-  }
+  },
+  "description": "Personal page",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/richardsp/richardespy.git"
+  },
+  "author": "Richard Espy",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/richardsp/richardespy/issues"
+  },
+  "homepage": "https://github.com/richardsp/richardespy#readme"
 }
