--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "watchman": "^1.0.0",
     "web-vitals": "^4.2.3"
   },
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "typescript-eslint": "^8.1.0"
