--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^14.5.2",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "babel": "^6.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "watchman": "^1.0.0",
     "web-vitals": "^4.2.3"
   },
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "babel-core": "^4.7.16",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
