--- a/package.json
+++ b/package.json
@@ -5,28 +5,18 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "babel": "^6.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "^3.0.1",
-    "watchman": "^1.0.0",
-    "web-vitals": "^4.2.3"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.3",
+    "webpack": "^5.93.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -41,12 +31,7 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "babel-core": "^4.7.16",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "globals": "^15.9.0",
-    "typescript-eslint": "^8.1.0"
+    "globals": "^15.9.0"
   },
   "description": "Personal page",
   "main": "index.js",
