--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.3",
-    "webpack": "^5.93.0"
+    "react-scripts": "^3.0.1",
+    "watchman": "^1.0.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -31,18 +37,8 @@
     ]
   },
   "devDependencies": {
-    "globals": "^15.9.0"
-  },
-  "description": "Personal page",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/richardsp/richardespy.git"
-  },
-  "author": "Richard Espy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/richardsp/richardespy/issues"
-  },
-  "homepage": "https://github.com/richardsp/richardespy#readme"
+    "eslint": "^6.8.0",
+    "globals": "^15.8.0",
+    "typescript-eslint": "^7.16.1"
+  }
 }
