--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "joi": "^17.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^3.0.1",
-    "watchman": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,7 +37,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^8.57.0",
     "globals": "^15.8.0",
     "typescript-eslint": "^7.16.1"
   }
