--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nth-check": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "watchman": "^1.0.0",
     "web-vitals": "^4.2.3",
