--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "watchman": "^1.0.0",
     "web-vitals": "^4.2.3",
