--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.7.7",
     "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
