--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
     "babel-loader": "^9.1.3",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
+    "leaflet": "^1.9.4",
     "loader-utils": "^3.3.1",
     "nth-check": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
-    "react-simple-maps": "^3.0.0",
-    "react-tooltip": "^5.28.0",
     "watchman": "^1.0.0",
     "web-vitals": "^4.2.3",
-    "webpack": "^5.93.0",
-    "world-atlas": "^2.0.2"
+    "webpack": "^5.93.0"
   },
   "scripts": {
     "start": "react-scripts start",
